<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="note"
            type="com.devedra.androidnotesedra.model.Note" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/itemNoteCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="6dp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/noteTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin_default"
                android:layout_marginTop="@dimen/layout_margin_default"
                android:layout_marginEnd="@dimen/layout_margin_default"
                android:text="@{note.title}"
                android:textColor="@color/colorWhiteText"
                android:textSize="@dimen/title_edit_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/item_title_tools_text" />

            <TextView
                android:id="@+id/noteContentText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin_default"
                android:layout_marginEnd="@dimen/layout_margin_default"
                android:layout_marginBottom="@dimen/layout_margin_default"
                android:maxLines="7"
                android:text="@{note.content}"
                android:textColor="@color/colorWhiteText"
                android:textSize="@dimen/content_edit_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noteTitleText"
                tools:text="@string/item_content_tools_text" />

            <TextView
                android:id="@+id/noteDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorWhiteText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noteContentText"
                app:setFormattedDate="@{note.updatedAt}"
                tools:text="@string/item_date_tools_text" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>